--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ tokio = { version = "1.21", features = ["full"]}
 futures = "0.3"
 shiplift = "0.7"
 openssl = { version = "0.10", features = ["vendored"] }
+yaml-rust = "0.4"
