--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ yaml-rust = "0.4"
 reqwest = {version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+log = "0.4"
+env_logger = "0.9"
