--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,13 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+# Sqlite Database
+*.db*
+
+# Nvim
+.nvim
+
+# Environment variables
+.env
 config.yml
