from tera to minijinja

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,6 @@ log = "0.4"
 env_logger = "0.9"
 anyhow = "1.0"
 serde_yaml = "0.9"
-tera = "1.17"
 gethostname = "0.4"
 chrono = "0.4"
+minijinja = "1.0.6"
