--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ edition = "2021"
 tokio = { version = "1.21", features = ["full"]}
 futures = "0.3"
 shiplift = "0.7"
-openssl = { version = "0.10", features = ["vendored"] }
 reqwest = {version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -18,5 +17,6 @@ env_logger = "0.9"
 anyhow = "1.0"
 serde_yaml = "0.9"
 gethostname = "0.4"
-chrono = "0.4"
 minijinja = "1.0.6"
+time = { version = "0.3.27", features = ["serde", "formatting", "parsing"] }
+openssl = { version = "0.10", features = ["vendored"] }
