--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ gethostname = "0.4"
 minijinja = "1.0.6"
 time = { version = "0.3.27", features = ["serde", "formatting", "parsing"] }
 openssl = { version = "0.10", features = ["vendored"] }
+urlencoding = "2.1"
+uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
