--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ time = { version = "0.3.27", features = ["serde", "formatting", "parsing"] }
 openssl = { version = "0.10", features = ["vendored"] }
 urlencoding = "2.1"
 uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
+markdown = "0.3.0"
