--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ time = { version = "0.3.27", features = ["serde", "formatting", "parsing"] }
 openssl = { version = "0.10", features = ["vendored"] }
 urlencoding = "2.1"
 markdown = "0.3.0"
+amiquip = "0.4.2"
+mqtt-async-client = "0.3.1"
+futures-util = "0.3.28"
