--- a/config.sample.yml
+++ b/config.sample.yml
@@ -1,6 +1,11 @@
 settings:
   # Log verbosity <debug, info (default), warn, error>
   logging: debug
+  # if `monitorize_always=true` all container are monitorized except has the
+  # label `es.atareao.den.monitorize=false`
+  # if `monitorize_always=false` only container with the following label
+  # `es.atareao.den.monitorize=true` will be monitorized
+  monitorize_always: true
 
 objects:
   #  https://docs.docker.com/engine/reference/commandline/events/
