--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1.21", features = ["full"]}
 futures = "0.3"
-shiplift = "0.7"
+docker-api = "0.14.0"
 reqwest = {version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
