--- a/config.sample.yml
+++ b/config.sample.yml
@@ -6,6 +6,7 @@ settings:
   # if `monitorize_always=false` only container with the following label
   # `es.atareao.den.monitorize=true` will be monitorized
   monitorize_always: true
+  docker_uri: /var/run/docker.sock
 
 objects:
   #  https://docs.docker.com/engine/reference/commandline/events/
